--- a/tareas.json
+++ b/tareas.json
@@ -1,1 +1,1 @@
-[{"nombre": "nations league", "completada": false}, {"nombre": "mundial de clubes", "completada": true}, {"nombre": "bodoke", "completada": true}, {"nombre": "Cocola", "completada": true}] 
+[{"nombre": "nations league", "completada": false}, {"nombre": "mundial de clubes", "completada": true}, {"nombre": "bodoke", "completada": true}, {"nombre": "Cocola", "completada": true}, {"nombre": "MOvie", "completada": true}, {"nombre": "Harry Potter", "completada": false}, {"nombre": "Check", "completada": true}]
